[tool.poetry]
name = "springmelody_brain_games"
version = "1.0.1"
description = "first hexlet python project brain-games"
repository = "https://github.com/springmelody/python-project-lvl1"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education"
]
authors = ["Aleksandr Zakharov <aleksandrzakharov91@gmail.com>"]
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
flake8 = "^3.8.3"
pytest = "^6.0.1"
importlib-metadata = "^1.7.0"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"